src/styles/customs/_mixins.scss
@use "sass:math";
@use "sass:list";

@use "colors" as *;
@use "fonts" as *;
@use "functions" as *;
@use "mediaqueries" as *;
@use "utils" as *;

// layout ---------------------------- // layout

@mixin container(
    $marginY: 0,
    $paddingX: rem-calc(32),
    $maxWidth: rem-calc(1200)
) {
    width: 100%;
    max-width: $maxWidth;
    padding: 0 $paddingX;
    margin: $marginY auto;
}

@mixin full-width {
    width: 100vw;
    position: relative;
    left: 50%;
    right: 50%;
    margin-left: -50vw;
    margin-right: -50vw;
}

// overall ---------------------------- // overall

@mixin smooth-trans($style: all) {
    transition: $style 0.3s ease-in-out;
}

@mixin box-shadow {
    box-shadow: 1px 3px 5px rgba(0 0 0 / 20%);
}

@mixin border-radius($radius: 5, $overflow: true) {
    $processed-radius: ();

    @each $value in $radius {
        $processed-radius: list.append(
            $processed-radius,
            if(math.is-unitless($value), $value + px, $value)
        );
    }

    border-radius: $processed-radius;

    @if $overflow {
        overflow: hidden;
    }
}

@mixin clamp($lines: 2) {
    display: -webkit-box;
    -webkit-line-clamp: $lines;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

@mixin ellipsis($lines: 2) {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

@mixin button($yAxis: rem-calc(8), $type: 1) {
    padding: $yAxis rem-calc(20);
    font-weight: 500;
    width: fit-content;
    height: fit-content;

    @include border-radius($overflow: false);
    @include smooth-trans;

    @if $type == 1 {
        background: $primary-color;
        color: $ash-color;
    } @else if $type == 2 {
        background-color: $warning-color;
        color: $white-color;
    } @else if $type == 3 {
        background-color: $white-color;
        color: $ash-color;
    }

    &:not(:disabled):hover {
        transform: scale(0.97);
    }
}

// dashboard ---------------------------- // dashboard

@mixin dash-card($margin: 1em, $padding: 1em, $boxShadow: true) {
    padding: $padding;
    margin: $margin;
    background-color: $trans-color;
    border: 2px solid $grey-color;

    @if $boxShadow {
        box-shadow: 0 3px 10px rgba(0 0 0 / 33%);
    }

    @include border-radius(7.5, false);

    @include mobile {
        border-radius: 10px;
        border-width: 3px;
        border-color: $primary-color;
    }
}

@mixin dash-button(
    $bgColor: $white-color,
    $txtColor: $ash-color,
    $yAxis: rem-calc(8),
    $type: 1
) {
    background-color: $bgColor;
    color: $txtColor;
    padding: $yAxis rem-calc(16);
    text-align: center;
    white-space: nowrap;

    @include border-radius(3, false);

    &:disabled {
        opacity: 0.5;
        cursor: default;
    }

    &:not(:disabled):hover {
        transform: scale(0.97);
    }
}

@mixin choose-display {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: rem-calc(16);
    width: rem-calc(100);
    height: rem-calc(150);
    border: solid 5px rgb(30 30 30);
    cursor: pointer;

    @include smooth-trans;
    @include box-shadow;
    @include border-radius(15);

    @include tablet {
        width: rem-calc(112.5);
        height: rem-calc(175);
    }

    @include desktop {
        width: rem-calc(125);
        height: rem-calc(200);
    }

    &:hover {
        border: solid 5px $secondary-color;
    }
}

@mixin choose-strokes {
    width: 62.5%;
    height: rem-calc(12.5);

    @include border-radius(2);
}

// page ---------------------------- // page

@mixin page-theme {
    height: 100%;
    min-height: 100vh;
    position: relative;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: rem-calc(80 24 150);
}

@mixin page-username {
    display: block;
    font-family: $poppins;
    margin-bottom: rem-calc(12);
    padding: rem-calc(0 16);

    @include fluid-type(32, 40);
}

@mixin page-occupation {
    margin: 0 auto rem-calc(48);
    padding: rem-calc(4 12);
    font-size: rem-calc(12);
    opacity: 0.75;
    width: fit-content;

    @include border-radius(4);
}

@mixin page-biography {
    display: inline-block;
    margin-bottom: rem-calc(48);
    padding: rem-calc(0 16);
    max-width: rem-calc(650);
    width: 100%;
}

@mixin page-links {
    margin: auto 0 rem-calc(48);
    display: flex;
    flex-direction: column;
    gap: rem-calc(8);
    width: 100%;

    @include mobile {
        padding: rem-calc(0 32);
    }

    & > li > a {
        display: inline-block;
        padding: rem-calc(8 16);
        width: 100%;
        max-width: rem-calc(750);

        @include border-radius(3, false);
        @include ellipsis;

        &:hover {
            opacity: 0.875;
        }
    }
}

@mixin page-location {
    margin-top: rem-calc(32);

    > i {
        margin-right: rem-calc(8);
    }

    > a {
        font-size: rem-calc(14);
        text-underline-offset: 3px;

        &:hover {
            text-decoration: underline;
        }
    }
}

@mixin page-socials {
    display: flex;
    justify-content: center;
    gap: rem-calc(20);
    margin-top: auto;
    flex-wrap: wrap;
    width: 100%;

    @include mobile {
        gap: rem-calc(24);
    }

    > a {
        &:hover {
            opacity: 0.75;
        }

        > i {
            @include fluid-type(24, 28);
        }
    }
}

